--- a/html/index.html
+++ b/html/index.html
@@ -1,12 +1,30 @@
+
 <!DOCTYPE html>
-<<!DOCTYPE html>
 <html lang="ru" dir="ltr">
   <head>
-    <link rel="stylesheet" href="/css/<style.css" media="screen">
+    <link rel="stylesheet" href="C:\Users\ppoult\github\projects\css\style.css" media="screen">
     <meta charset="utf-8">
-    <title>Sexy Shop</title>
+    <title>Dasmoto's Arts & Crafts</title>
   </head>
   <body>
-
+<h1 class="title">Dasmoto's Arts & Crafts</h1>
+<div class="center">
+<h2 class="subheader bg-green">Cuckold</h2>
+<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/hacksaw.jpeg" alt="hacksaw brushes">
+<h3>Hacksaw Brushes</h3>
+<p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes.<span> Starting at $3.00 / brush.</span></p>
+</div>
+<div class="center">
+<h2 class="subheader bg-red">BBW</h2>
+<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/frames.jpeg" alt="frames">
+<h3>Fart Frames (ASSorted)</h3>
+<p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs.<span> Starting at $2.00 / frame.</span></p>
+</div>
+<div class="center">
+<h2 class="subheader bg-blue">Anal Gaping</h2>
+<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/finnish.jpeg" alt="frames">
+<h3>Niggas be chimpin'</h3>
+<p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span> Starting at $5.00 / tube.</span></p>
+</div>
   </body>
 </html>
